--- a/provas/N2-2/code.ipynb
+++ b/provas/N2-2/code.ipynb
@@ -14,8 +14,7 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "import re    #Expressões regulares são sequências de caracteres que definem um padrão de busca.\n",
-    "#nltk.download()"
+    "import re    #Expressões regulares são sequências de caracteres que definem um padrão de busca."
    ]
   },
   {
@@ -27,12 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "texto = 'Os melhores médicos do mundo: o Dr. Dieta, o Dr. Tranquilidade e o Dr. Alegria. Jonathan Swift' \n",
-    "#'The best doctors in the world'"
+    "texto = 'Os melhores médicos do mundo: o Dr. Dieta, o Dr. Tranquilidade e o Dr. Alegria. Jonathan Swift'"
    ]
   },
   {
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +62,7 @@
        " ' Jonathan Swift']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +99,7 @@
        " 'Swift']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +135,7 @@
        " 'Jonathan Swift']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +175,7 @@
        " 'Swift']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +399,7 @@
        " 'teriam']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -429,15 +427,14 @@
        "['melhores', 'médicos', 'Tranquilidade', 'Jonathan', 'Swift']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "limpar_dados = [x for x in texto.split() if re.match(r'[^\\W\\d]*$', x)]\n",
-    "juntar_novamente = ' '.join(limpar_dados)\n",
-    "limpar_texto = [palavra for palavra in juntar_novamente.split() if palavra.lower() not in stopwords]\n",
+    "limpar_texto = [palavra for palavra in limpar_dados if palavra.lower() not in stopwords]\n",
     "limpar_texto"
    ]
   },
@@ -445,12 +442,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Redução para raiz"
+    "Redução para raiz "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -459,70 +456,299 @@
        "['melhor', 'médic', 'tranquil', 'jonathan', 'swift']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raiz = []\n",
+    "raiz_palavras = []\n",
     "stemmer = nltk.stem.RSLPStemmer()\n",
     "for y in limpar_texto:\n",
-    "    raiz.append(stemmer.stem(y))\n",
-    "raiz"
+    "    raiz_palavras.append(stemmer.stem(y))\n",
+    "raiz_palavras"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rotulando"
+    "Rotulando teste em português"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('The', 'DT'),\n",
-       " ('best', 'JJS'),\n",
-       " ('doctors', 'NNS'),\n",
-       " ('in', 'IN'),\n",
-       " ('the', 'DT'),\n",
-       " ('world', 'NN')]"
+       "[('melhor', 'NN'),\n",
+       " ('médic', 'JJ'),\n",
+       " ('tranquil', 'NN'),\n",
+       " ('jonathan', 'NN'),\n",
+       " ('swift', 'NN')]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens = nltk.pos_tag(raiz_palavras)\n",
+    "tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rotulando teste em inglês"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i',\n",
+       " 'me',\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'we',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'you',\n",
+       " \"you're\",\n",
+       " \"you've\",\n",
+       " \"you'll\",\n",
+       " \"you'd\",\n",
+       " 'your',\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves',\n",
+       " 'he',\n",
+       " 'him',\n",
+       " 'his',\n",
+       " 'himself',\n",
+       " 'she',\n",
+       " \"she's\",\n",
+       " 'her',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " 'it',\n",
+       " \"it's\",\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " 'they',\n",
+       " 'them',\n",
+       " 'their',\n",
+       " 'theirs',\n",
+       " 'themselves',\n",
+       " 'what',\n",
+       " 'which',\n",
+       " 'who',\n",
+       " 'whom',\n",
+       " 'this',\n",
+       " 'that',\n",
+       " \"that'll\",\n",
+       " 'these',\n",
+       " 'those',\n",
+       " 'am',\n",
+       " 'is',\n",
+       " 'are',\n",
+       " 'was',\n",
+       " 'were',\n",
+       " 'be',\n",
+       " 'been',\n",
+       " 'being',\n",
+       " 'have',\n",
+       " 'has',\n",
+       " 'had',\n",
+       " 'having',\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'did',\n",
+       " 'doing',\n",
+       " 'a',\n",
+       " 'an',\n",
+       " 'the',\n",
+       " 'and',\n",
+       " 'but',\n",
+       " 'if',\n",
+       " 'or',\n",
+       " 'because',\n",
+       " 'as',\n",
+       " 'until',\n",
+       " 'while',\n",
+       " 'of',\n",
+       " 'at',\n",
+       " 'by',\n",
+       " 'for',\n",
+       " 'with',\n",
+       " 'about',\n",
+       " 'against',\n",
+       " 'between',\n",
+       " 'into',\n",
+       " 'through',\n",
+       " 'during',\n",
+       " 'before',\n",
+       " 'after',\n",
+       " 'above',\n",
+       " 'below',\n",
+       " 'to',\n",
+       " 'from',\n",
+       " 'up',\n",
+       " 'down',\n",
+       " 'in',\n",
+       " 'out',\n",
+       " 'on',\n",
+       " 'off',\n",
+       " 'over',\n",
+       " 'under',\n",
+       " 'again',\n",
+       " 'further',\n",
+       " 'then',\n",
+       " 'once',\n",
+       " 'here',\n",
+       " 'there',\n",
+       " 'when',\n",
+       " 'where',\n",
+       " 'why',\n",
+       " 'how',\n",
+       " 'all',\n",
+       " 'any',\n",
+       " 'both',\n",
+       " 'each',\n",
+       " 'few',\n",
+       " 'more',\n",
+       " 'most',\n",
+       " 'other',\n",
+       " 'some',\n",
+       " 'such',\n",
+       " 'no',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'only',\n",
+       " 'own',\n",
+       " 'same',\n",
+       " 'so',\n",
+       " 'than',\n",
+       " 'too',\n",
+       " 'very',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'can',\n",
+       " 'will',\n",
+       " 'just',\n",
+       " 'don',\n",
+       " \"don't\",\n",
+       " 'should',\n",
+       " \"should've\",\n",
+       " 'now',\n",
+       " 'd',\n",
+       " 'll',\n",
+       " 'm',\n",
+       " 'o',\n",
+       " 're',\n",
+       " 've',\n",
+       " 'y',\n",
+       " 'ain',\n",
+       " 'aren',\n",
+       " \"aren't\",\n",
+       " 'couldn',\n",
+       " \"couldn't\",\n",
+       " 'didn',\n",
+       " \"didn't\",\n",
+       " 'doesn',\n",
+       " \"doesn't\",\n",
+       " 'hadn',\n",
+       " \"hadn't\",\n",
+       " 'hasn',\n",
+       " \"hasn't\",\n",
+       " 'haven',\n",
+       " \"haven't\",\n",
+       " 'isn',\n",
+       " \"isn't\",\n",
+       " 'ma',\n",
+       " 'mightn',\n",
+       " \"mightn't\",\n",
+       " 'mustn',\n",
+       " \"mustn't\",\n",
+       " 'needn',\n",
+       " \"needn't\",\n",
+       " 'shan',\n",
+       " \"shan't\",\n",
+       " 'shouldn',\n",
+       " \"shouldn't\",\n",
+       " 'wasn',\n",
+       " \"wasn't\",\n",
+       " 'weren',\n",
+       " \"weren't\",\n",
+       " 'won',\n",
+       " \"won't\",\n",
+       " 'wouldn',\n",
+       " \"wouldn't\"]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stopwords2 = nltk.corpus.stopwords.words('english')\n",
+    "stopwords2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['best', 'doctors', 'world']"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "texto2 = 'The best doctors in the world'\n",
-    "\n",
-    "tokens = nltk.pos_tag(texto2.split())\n",
-    "tokens"
+    "palavras2 = nltk.tokenize.word_tokenize(texto2)\n",
+    "limpar_texto_2 = [palavra for palavra in palavras2 if palavra.lower() not in stopwords2]\n",
+    "limpar_texto_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('best', 'JJS'), ('doctors', 'NNS'), ('world', 'NN')]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from nltk.corpus import treebank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "treebank(tokens)"
+    "tokens2 = nltk.pos_tag(limpar_texto_2)\n",
+    "tokens2"
    ]
   },
   {
